@@ -18,14 +18,14 @@
  */
 package org.apache.pinot.queries;
 
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.TreeSet;
 import org.apache.commons.io.FileUtils;
 import org.apache.pinot.common.response.broker.BrokerResponseNative;
 import org.apache.pinot.segment.local.indexsegment.immutable.ImmutableSegmentLoader;
@@ -35,11 +35,14 @@ import org.apache.pinot.segment.local.segment.readers.GenericRowRecordReader;
 import org.apache.pinot.segment.spi.ImmutableSegment;
 import org.apache.pinot.segment.spi.IndexSegment;
 import org.apache.pinot.segment.spi.creator.SegmentGeneratorConfig;
+import org.apache.pinot.spi.config.table.FieldConfig;
+import org.apache.pinot.spi.config.table.JsonIndexConfig;
 import org.apache.pinot.spi.config.table.TableConfig;
 import org.apache.pinot.spi.config.table.TableType;
 import org.apache.pinot.spi.data.FieldSpec.DataType;
 import org.apache.pinot.spi.data.Schema;
 import org.apache.pinot.spi.data.readers.GenericRow;
+import org.apache.pinot.spi.utils.JsonUtils;
 import org.apache.pinot.spi.utils.builder.TableConfigBuilder;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.BeforeClass;
@@ -59,10 +62,11 @@ public class JsonMatchQueriesTest extends BaseQueriesTest {
 
   private static final String ID_COLUMN = "id";
   private static final String JSON_COLUMN = "json";
-  private static final Schema SCHEMA = new Schema.SchemaBuilder().addSingleValueDimension(ID_COLUMN, DataType.INT)
-      .addSingleValueDimension(JSON_COLUMN, DataType.JSON).build();
-  private static final TableConfig TABLE_CONFIG = new TableConfigBuilder(TableType.OFFLINE).setTableName(RAW_TABLE_NAME)
-      .setJsonIndexColumns(Collections.singletonList(JSON_COLUMN)).build();
+
+  private static final Schema SCHEMA = new Schema.SchemaBuilder()
+      .addSingleValueDimension(ID_COLUMN, DataType.INT)
+      .addSingleValueDimension(JSON_COLUMN, DataType.JSON)
+      .build();
 
   private IndexSegment _indexSegment;
   private List<IndexSegment> _indexSegments;
@@ -110,7 +114,27 @@ public class JsonMatchQueriesTest extends BaseQueriesTest {
     // Top-level object with multiple nested-array values
     records.add(createRecord(13, "{\"key\": [1, [\"foo\", [true]]], \"key2\": [2, [\"bar\", false]]}"));
 
-    SegmentGeneratorConfig segmentGeneratorConfig = new SegmentGeneratorConfig(TABLE_CONFIG, SCHEMA);
+    // nested arrays used to test not in/not eq predicates
+    records.add(createRecord(15, "{\"cities\":[ \"New York\" ] }"));
+    records.add(createRecord(16, "{\"cities\":[ \"Washington\", \"New York\"] }"));
+    records.add(createRecord(17, "{\"cities\":[ \"New York\", \"Washington\"] }"));
+    records.add(createRecord(18, "{\"cities\":[ \"Washington\"] }"));
+    records.add(createRecord(19, "{\"cities\":[ \"San Francisco\"] }"));
+    records.add(createRecord(20, "{\"cities\":[ \"San Francisco\", \"Miami\", \"Washington\"] }"));
+    records.add(createRecord(21, "{\"cities\":[] }"));
+    records.add(createRecord(22, "{\"cities\":[\"\"] }"));
+    records.add(createRecord(23, "{\"cities\":[ \"Washington\", \"Washington\"] }"));
+
+    // regular field used to test not in/not eq predicates
+    records.add(createRecord(24, "{\"country\": \"USA\"}"));
+    records.add(createRecord(25, "{\"country\": \"Canada\"}"));
+    records.add(createRecord(26, "{\"country\": \"Mexico\"}"));
+    records.add(createRecord(27, "{\"country\":\"\"}"));
+    records.add(createRecord(28, "{\"country\":null}"));
+
+    TableConfig tableConfig = getTableConfig();
+
+    SegmentGeneratorConfig segmentGeneratorConfig = new SegmentGeneratorConfig(tableConfig, SCHEMA);
     segmentGeneratorConfig.setTableName(RAW_TABLE_NAME);
     segmentGeneratorConfig.setSegmentName(SEGMENT_NAME);
     segmentGeneratorConfig.setOutDir(INDEX_DIR.getPath());
@@ -119,12 +143,32 @@ public class JsonMatchQueriesTest extends BaseQueriesTest {
     driver.init(segmentGeneratorConfig, new GenericRowRecordReader(records));
     driver.build();
 
-    IndexLoadingConfig indexLoadingConfig = new IndexLoadingConfig();
-    indexLoadingConfig.setJsonIndexColumns(Collections.singleton(JSON_COLUMN));
+    IndexLoadingConfig indexLoadingConfig = new IndexLoadingConfig(tableConfig, SCHEMA);
     ImmutableSegment immutableSegment =
         ImmutableSegmentLoader.load(new File(INDEX_DIR, SEGMENT_NAME), indexLoadingConfig);
     _indexSegment = immutableSegment;
     _indexSegments = Arrays.asList(immutableSegment, immutableSegment);
+  }
+
+  protected TableConfig getTableConfig() {
+    ObjectNode indexes = JsonUtils.newObjectNode();
+    JsonIndexConfig config = new JsonIndexConfig();
+    config.setDisableCrossArrayUnnest(isDisableCrossArrayUnnest());
+    indexes.put("json", config.toJsonNode());
+
+    return new TableConfigBuilder(TableType.OFFLINE)
+        .setTableName(RAW_TABLE_NAME)
+        //.setJsonIndexColumns(List.of(JSON_COLUMN))
+        .addFieldConfig(
+            new FieldConfig.Builder(JSON_COLUMN)
+                .withEncodingType(FieldConfig.EncodingType.RAW)
+                .withIndexes(indexes)
+                .build())
+        .build();
+  }
+
+  protected boolean isDisableCrossArrayUnnest() {
+    return false; // default value
   }
 
   private GenericRow createRecord(int id, Object value) {
@@ -137,63 +181,117 @@ public class JsonMatchQueriesTest extends BaseQueriesTest {
   @Test
   public void testQueries() {
     // Top-level value
-    assertEquals(getSelectedIds("'\"$\"=1'"), Collections.singleton(1));
-    assertEquals(getSelectedIds("'\"$\"=''foo'''"), Collections.singleton(2));
-    assertEquals(getSelectedIds("'\"$\"=true'"), Collections.singleton(3));
-    assertEquals(getSelectedIds("'\"$\" IN (1, ''foo'')'"), new HashSet<>(Arrays.asList(1, 2)));
-    assertEquals(getSelectedIds("'\"$\" IS NOT NULL'"), new HashSet<>(Arrays.asList(1, 2, 3)));
+    assertEquals(getSelectedIds("'\"$\"=1'"), Set.of(1));
+    assertEquals(getSelectedIds("'\"$\"=''foo'''"), Set.of(2));
+    assertEquals(getSelectedIds("'\"$\"=true'"), Set.of(3));
+    assertEquals(getSelectedIds("'\"$\" IN (1, ''foo'')'"), Set.of(1, 2));
+    assertEquals(getSelectedIds("'\"$\" IS NOT NULL'"), Set.of(1, 2, 3));
 
     // Top-level array
-    assertEquals(getSelectedIds("'\"$[0]\"=1'"), new HashSet<>(Arrays.asList(4, 5, 6)));
-    assertEquals(getSelectedIds("'\"$[*]\"=2'"), Collections.singleton(4));
-    assertEquals(getSelectedIds("'\"$[*]\"=''foo'''"), Collections.singleton(5));
-    assertEquals(getSelectedIds("'\"$[2]\"=true'"), Collections.singleton(5));
+    assertEquals(getSelectedIds("'\"$[0]\"=1'"), Set.of(4, 5, 6));
+    assertEquals(getSelectedIds("'\"$[*]\"=2'"), Set.of(4));
+    assertEquals(getSelectedIds("'\"$[*]\"=''foo'''"), Set.of(5));
+    assertEquals(getSelectedIds("'\"$[2]\"=true'"), Set.of(5));
 
     // Top-level nested-array
-    assertEquals(getSelectedIds("'\"$[*][*]\"=true'"), Collections.singleton(6));
-    assertEquals(getSelectedIds("'\"$[*][0]\"=''foo'''"), Collections.singleton(6));
-    assertEquals(getSelectedIds("'\"$[1][*]\"=true'"), Collections.singleton(6));
-    assertEquals(getSelectedIds("'\"$[1][0]\"=''foo'''"), Collections.singleton(6));
+    assertEquals(getSelectedIds("'\"$[*][*]\"=true'"), Set.of(6));
+    assertEquals(getSelectedIds("'\"$[*][0]\"=''foo'''"), Set.of(6));
+    assertEquals(getSelectedIds("'\"$[1][*]\"=true'"), Set.of(6));
+    assertEquals(getSelectedIds("'\"$[1][0]\"=''foo'''"), Set.of(6));
     assertTrue(getSelectedIds("'\"$[*][*]\"=1'").isEmpty());
 
     // Top-level array with object elements
-    assertEquals(getSelectedIds("'\"$[*].key\"=1'"), Collections.singleton(7));
-    assertEquals(getSelectedIds("'\"$[1].key\"=''foo'''"), Collections.singleton(7));
+    assertEquals(getSelectedIds("'\"$[*].key\"=1'"), Set.of(7));
+    assertEquals(getSelectedIds("'\"$[1].key\"=''foo'''"), Set.of(7));
     assertTrue(getSelectedIds("'\"$[*].foo\"=1'").isEmpty());
 
     // Top-level object
-    assertEquals(getSelectedIds("'\"$.key\"=1'"), Collections.singleton(9));
-    assertEquals(getSelectedIds("'\"$.key\"=''foo'''"), Collections.singleton(10));
-    assertEquals(getSelectedIds("'\"$.key\"=true'"), Collections.singleton(11));
-    assertEquals(getSelectedIds("'\"$.key\" IN (1, ''foo'')'"), new HashSet<>(Arrays.asList(9, 10)));
-    assertEquals(getSelectedIds("'\"$.key\" IS NOT NULL'"), new HashSet<>(Arrays.asList(9, 10, 11)));
+    assertEquals(getSelectedIds("'\"$.key\"=1'"), Set.of(9));
+    assertEquals(getSelectedIds("'\"$.key\"=''foo'''"), Set.of(10));
+    assertEquals(getSelectedIds("'\"$.key\"=true'"), Set.of(11));
+    assertEquals(getSelectedIds("'\"$.key\" IN (1, ''foo'')'"), Set.of(9, 10));
+    assertEquals(getSelectedIds("'\"$.key\" IS NOT NULL'"), Set.of(9, 10, 11));
 
     // Top-level object with nested-array value
-    assertEquals(getSelectedIds("'\"$.key[0]\"=1'"), new HashSet<>(Arrays.asList(12, 13)));
-    assertEquals(getSelectedIds("'\"$.key[*][0]\"=''foo'''"), new HashSet<>(Arrays.asList(12, 13)));
-    assertEquals(getSelectedIds("'\"$.key[1][*]\"=true'"), Collections.singleton(12));
-    assertEquals(getSelectedIds("'\"$.key[1][1][0]\"=true'"), Collections.singleton(13));
-
-    // Top-level object with multiple nested-array values
-    assertEquals(getSelectedIds("'\"$.key[*][*][*]\"=true AND \"$.key2[1][0]\"=''bar'''"), Collections.singleton(13));
+    assertEquals(getSelectedIds("'\"$.key[0]\"=1'"), Set.of(12, 13));
+    assertEquals(getSelectedIds("'\"$.key[*][0]\"=''foo'''"), Set.of(12, 13));
+    assertEquals(getSelectedIds("'\"$.key[1][*]\"=true'"), Set.of(12));
+    assertEquals(getSelectedIds("'\"$.key[1][1][0]\"=true'"), Set.of(13));
 
     // Legacy query format
-    assertEquals(getSelectedIds("'key=1'"), Collections.singleton(9));
-    assertEquals(getSelectedIds("'key=''foo'''"), Collections.singleton(10));
-    assertEquals(getSelectedIds("'key=true'"), Collections.singleton(11));
-    assertEquals(getSelectedIds("'key IN (1, ''foo'')'"), new HashSet<>(Arrays.asList(9, 10)));
-    assertEquals(getSelectedIds("'key IS NOT NULL'"), new HashSet<>(Arrays.asList(9, 10, 11)));
-    assertEquals(getSelectedIds("'\"key[0]\"=1'"), new HashSet<>(Arrays.asList(12, 13)));
-    assertEquals(getSelectedIds("'\"key[*][0]\"=''foo'''"), new HashSet<>(Arrays.asList(12, 13)));
-    assertEquals(getSelectedIds("'\"key[1][*]\"=true'"), Collections.singleton(12));
-    assertEquals(getSelectedIds("'\"key[1][1][0]\"=true'"), Collections.singleton(13));
+    assertEquals(getSelectedIds("'key=1'"), Set.of(9));
+    assertEquals(getSelectedIds("'key=''foo'''"), Set.of(10));
+    assertEquals(getSelectedIds("'key=true'"), Set.of(11));
+    assertEquals(getSelectedIds("'key IN (1, ''foo'')'"), Set.of(9, 10));
+    assertEquals(getSelectedIds("'key IS NOT NULL'"), Set.of(9, 10, 11));
+    assertEquals(getSelectedIds("'\"key[0]\"=1'"), Set.of(12, 13));
+    assertEquals(getSelectedIds("'\"key[*][0]\"=''foo'''"), Set.of(12, 13));
+    assertEquals(getSelectedIds("'\"key[1][*]\"=true'"), Set.of(12));
+    assertEquals(getSelectedIds("'\"key[1][1][0]\"=true'"), Set.of(13));
   }
 
-  private Set<Integer> getSelectedIds(String jsonMatchExpression) {
+  @Test
+  public void testQueriesOnNestedArrays() {
+    // Top-level object with multiple nested-array values
+    assertEquals(getSelectedIds("'\"$.key[*][*][*]\"=true AND \"$.key2[1][0]\"=''bar'''"), Set.of(13));
+    // searching one more than one nested arrays work when 'disableCrossArrayUnnest' is false (default)
+    assertEquals(getSelectedIds("'\"$.key[0]\"=1 AND \"$.key2[0]\"=2'"), Set.of(13));
+  }
+
+  @Test
+  public void testOtherQueries() {
+    // NOT_EQ on array
+    assertEquals(getSelectedIds("'\"$.cities[0]\" != ''Seattle'' '"), Set.of(15, 16, 17, 18, 19, 20, 22, 23));
+    assertEquals(getSelectedIds("'\"$.cities[*]\" != ''Seattle'' '"), Set.of(15, 16, 17, 18, 19, 20, 22, 23));
+
+    assertEquals(getSelectedIds("'\"$.cities[0]\" != ''Washington'' '"), Set.of(15, 17, 19, 20, 22));
+    assertEquals(getSelectedIds("'\"$.cities[1]\" != ''Washington'' '"), Set.of(16, 20));
+    assertEquals(getSelectedIds("'\"$.cities[*]\" != ''Washington'' '"), Set.of(15, 16, 17, 19, 20, 22));
+
+    // NOT_IN on array
+    assertEquals(getSelectedIds("'\"$.cities[0]\" NOT IN (''Seattle'') '"), Set.of(15, 16, 17, 18, 19, 20, 22, 23));
+    assertEquals(getSelectedIds("'\"$.cities[*]\" NOT IN (''Seattle'') '"), Set.of(15, 16, 17, 18, 19, 20, 22, 23));
+    assertEquals(getSelectedIds("'\"$.cities[0]\" NOT IN (''Seattle'', ''Boston'') '"),
+        Set.of(15, 16, 17, 18, 19, 20, 22, 23));
+    assertEquals(getSelectedIds("'\"$.cities[*]\" NOT IN (''Seattle'', ''Boston'') '"),
+        Set.of(15, 16, 17, 18, 19, 20, 22, 23));
+
+    assertEquals(getSelectedIds("'\"$.cities[0]\" NOT IN (''Washington'') '"), Set.of(15, 17, 19, 20, 22));
+    assertEquals(getSelectedIds("'\"$.cities[1]\" NOT IN (''Washington'') '"), Set.of(16, 20));
+    assertEquals(getSelectedIds("'\"$.cities[*]\" NOT IN (''Washington'') '"), Set.of(15, 16, 17, 19, 20, 22));
+
+    assertEquals(getSelectedIds("'\"$.cities[0]\" NOT IN (''Washington'', ''New York'') '"), Set.of(19, 20, 22));
+    assertEquals(getSelectedIds("'\"$.cities[1]\" NOT IN (''Washington'', ''New York'') '"), Set.of(20));
+    assertEquals(getSelectedIds("'\"$.cities[*]\" NOT IN (''Washington'', ''New York'') '"), Set.of(19, 20, 22));
+
+    // NOT_EQ on field
+    assertEquals(getSelectedIds("'\"$.country\" != ''USA'' '"), Set.of(25, 26, 27));
+    assertEquals(getSelectedIds("'\"$.country\" != ''Canada'' '"), Set.of(24, 26, 27));
+    // '"$.country" != '''' throws error for some reason,
+    assertEquals(getSelectedIds("'\"$.country\" != '' '' '"), Set.of(24, 25, 26, 27));
+    assertEquals(getSelectedIds("'\"$.country\" != ''Brazil'' '"), Set.of(24, 25, 26, 27));
+
+    // NOT IN on field
+    assertEquals(getSelectedIds("'\"$.country\" NOT IN (''USA'') '"), Set.of(25, 26, 27));
+    assertEquals(getSelectedIds("'\"$.country\" NOT IN (''Canada'') '"), Set.of(24, 26, 27));
+    assertEquals(getSelectedIds("'\"$.country\" NOT IN (''USA'', ''Canada'') '"), Set.of(26, 27));
+    // '\"$.country\" NOT IN ('''')  throws error for some reason
+    assertEquals(getSelectedIds("'\"$.country\" NOT IN ('' '') '"), Set.of(24, 25, 26, 27));
+    assertEquals(getSelectedIds("'\"$.country\" NOT IN (''Brazil'', ''Panama'') '"), Set.of(24, 25, 26, 27));
+
+    assertEquals(getSelectedIds("'REGEXP_LIKE(\"$.country\" , ''Brazil|Panama'') '"), Set.of());
+    assertEquals(getSelectedIds("'REGEXP_LIKE(\"$.country\" , ''USA|Canada'') '"), Set.of(24, 25));
+    assertEquals(getSelectedIds("'REGEXP_LIKE(\"$.country\" , ''[MC][ea].*'') '"), Set.of(25, 26));
+    assertEquals(getSelectedIds("'REGEXP_LIKE(\"$.country\" , ''US.*'') '"), Set.of(24));
+
+    assertEquals(getSelectedIds("'\"$.country\" < ''Romania'' '"), Set.of(25, 26, 27));
+  }
+
+  protected Set<Integer> getSelectedIds(String jsonMatchExpression) {
     String query = String.format("SELECT id FROM testTable WHERE JSON_MATCH(json, %s) LIMIT 100", jsonMatchExpression);
     BrokerResponseNative brokerResponse = getBrokerResponse(query);
     List<Object[]> rows = brokerResponse.getResultTable().getRows();
-    Set<Integer> selectedIds = new HashSet<>();
+    Set<Integer> selectedIds = new TreeSet<>();
     for (Object[] row : rows) {
       selectedIds.add((Integer) row[0]);
     }
