@@ -18,32 +18,57 @@
  */
 package org.apache.pinot.segment.local.recordtransformer;
 
+import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import java.util.Set;
 import javax.annotation.Nullable;
 import org.apache.pinot.segment.local.utils.IngestionUtils;
 import org.apache.pinot.spi.config.table.TableConfig;
+import org.apache.pinot.spi.config.table.ingestion.EnrichmentConfig;
+import org.apache.pinot.spi.config.table.ingestion.IngestionConfig;
 import org.apache.pinot.spi.data.Schema;
 import org.apache.pinot.spi.data.readers.GenericRow;
+import org.apache.pinot.spi.recordtransformer.RecordTransformer;
+import org.apache.pinot.spi.recordtransformer.enricher.RecordEnricher;
+import org.apache.pinot.spi.recordtransformer.enricher.RecordEnricherRegistry;
 
 
 /**
  * The {@code CompositeTransformer} class performs multiple transforms based on the inner {@link RecordTransformer}s.
  */
 public class CompositeTransformer implements RecordTransformer {
+  // TODO: Integrate ComplexTypeTransformer into the CompositeTransformer.
   private final List<RecordTransformer> _transformers;
 
   /**
+   * Returns a list of record transformers that perform enrichment of the record before the record is passed onto the
+   * ComplexType transformer. The transform pipeline order is as follows:
+   * <ol>
+   *  <li> pre-complex type transformers</li>
+   *  <li> complex type transformers</li>
+   *  <li> plain record transformers</li>
+   * </ol>
+   */
+  public static List<RecordTransformer> getPreComplexTypeTransformers(TableConfig tableConfig) {
+    List<RecordTransformer> preComplexTypeTransformers = new ArrayList<>();
+    addRecordEnricherTransformers(tableConfig, preComplexTypeTransformers, true);
+    return preComplexTypeTransformers;
+  }
+
+  /**
    * Returns a record transformer that performs null value handling, time/expression/data-type transformation and record
-   * sanitization.
+   * sanitization. Note that the list of transformers returned from this method does not include the pre-complex type
+   * and complex type transformers.
    * <p>NOTE: DO NOT CHANGE THE ORDER OF THE RECORD TRANSFORMERS
    * <ul>
    *   <li>
-   *     Optional {@link ExpressionTransformer} before everyone else, so that we get the real columns for other
-   *     transformers to work on
+   *     Optional list of {@link RecordEnricher}s to enrich the record before any other transformation.
+   *   </li>
+   *   <li>
+   *     Optional {@link ExpressionTransformer} after enrichers, so that we get the real columns for other transformers
+   *     to work on
    *   </li>
    *   <li>
    *     Optional {@link FilterTransformer} after {@link ExpressionTransformer}, so that we have source as well as
@@ -51,15 +76,11 @@ public class CompositeTransformer implements RecordTransformer {
    *   </li>
    *   <li>
    *     Optional {@link SchemaConformingTransformer} after {@link FilterTransformer}, so that we can transform input
-   *     records that have varying fields to a fixed schema without dropping any fields
-   *   </li>
-   *   <li>
-   *     Optional {@link SchemaConformingTransformerV2} after {@link FilterTransformer}, so that we can transform
-   *     input records that have varying fields to a fixed schema and keep or drop other fields by configuration. We
+   *     records that have varying fields to a fixed schema and keep or drop other fields by configuration. We
    *     could also gain enhanced text search capabilities from it.
    *   </li>
    *   <li>
-   *     {@link DataTypeTransformer} after {@link SchemaConformingTransformer} or {@link SchemaConformingTransformerV2}
+   *     {@link DataTypeTransformer} after {@link SchemaConformingTransformer}
    *     to convert values to comply with the schema
    *   </li>
    *   <li>
@@ -82,12 +103,46 @@ public class CompositeTransformer implements RecordTransformer {
    * </ul>
    */
   public static List<RecordTransformer> getDefaultTransformers(TableConfig tableConfig, Schema schema) {
-    return Stream.of(new ExpressionTransformer(tableConfig, schema), new FilterTransformer(tableConfig),
-            new SchemaConformingTransformer(tableConfig, schema),
-            new SchemaConformingTransformerV2(tableConfig, schema), new DataTypeTransformer(tableConfig, schema),
-            new TimeValidationTransformer(tableConfig, schema), new SpecialValueTransformer(schema),
-            new NullValueTransformer(tableConfig, schema), new SanitizationTransformer(schema)).filter(t -> !t.isNoOp())
-        .collect(Collectors.toList());
+    List<RecordTransformer> transformers = new ArrayList<>();
+    addRecordEnricherTransformers(tableConfig, transformers, false);
+    addIfNotNoOp(transformers, new ExpressionTransformer(tableConfig, schema));
+    addIfNotNoOp(transformers, new FilterTransformer(tableConfig));
+    addIfNotNoOp(transformers, new SchemaConformingTransformer(tableConfig, schema));
+    addIfNotNoOp(transformers, new DataTypeTransformer(tableConfig, schema));
+    addIfNotNoOp(transformers, new TimeValidationTransformer(tableConfig, schema));
+    addIfNotNoOp(transformers, new SpecialValueTransformer(schema));
+    addIfNotNoOp(transformers, new NullValueTransformer(tableConfig, schema));
+    addIfNotNoOp(transformers, new SanitizationTransformer(schema));
+    return transformers;
+  }
+
+  private static void addIfNotNoOp(List<RecordTransformer> transformers, RecordTransformer transformer) {
+    if (!transformer.isNoOp()) {
+      transformers.add(transformer);
+    }
+  }
+
+  private static void addRecordEnricherTransformers(TableConfig tableConfig,
+      List<RecordTransformer> transformers, boolean preComplexTypeTransformers) {
+    IngestionConfig ingestionConfig = tableConfig.getIngestionConfig();
+    if (ingestionConfig != null) {
+      List<EnrichmentConfig> enrichmentConfigs = ingestionConfig.getEnrichmentConfigs();
+      if (enrichmentConfigs != null) {
+        for (EnrichmentConfig enrichmentConfig : enrichmentConfigs) {
+          // if pre-ComplexType transformers are requested, add only pre-ComplexType transformers. Similarly, if
+          // non pre-ComplexType transformers are requested, add only non pre-ComplexType transformers.
+          if (preComplexTypeTransformers != enrichmentConfig.isPreComplexTypeTransform()) {
+            continue;
+          }
+          try {
+            addIfNotNoOp(transformers, RecordEnricherRegistry.createRecordEnricher(enrichmentConfig));
+          } catch (IOException e) {
+            throw new RuntimeException("Failed to instantiate record enricher " + enrichmentConfig.getEnricherType(),
+                e);
+          }
+        }
+      }
+    }
   }
 
   public static CompositeTransformer getDefaultTransformer(TableConfig tableConfig, Schema schema) {
@@ -96,10 +151,6 @@ public class CompositeTransformer implements RecordTransformer {
 
   /**
    * Includes custom and default transformers.
-   * @param customTransformers
-   * @param tableConfig
-   * @param schema
-   * @return
    */
   public static CompositeTransformer composeAllTransformers(List<RecordTransformer> customTransformers,
       TableConfig tableConfig, Schema schema) {
@@ -112,11 +163,20 @@ public class CompositeTransformer implements RecordTransformer {
    * Returns a pass through record transformer that does not transform the record.
    */
   public static CompositeTransformer getPassThroughTransformer() {
-    return new CompositeTransformer(Collections.emptyList());
+    return new CompositeTransformer(List.of());
   }
 
   public CompositeTransformer(List<RecordTransformer> transformers) {
     _transformers = transformers;
+  }
+
+  @Override
+  public Set<String> getInputColumns() {
+    Set<String> inputColumns = new HashSet<>();
+    for (RecordTransformer transformer : _transformers) {
+      inputColumns.addAll(transformer.getInputColumns());
+    }
+    return inputColumns;
   }
 
   @Nullable
